@@ -40,23 +40,18 @@ public class NativeLoader {
      */
     public static synchronized void load() {
         if (loaded) return;
-
         Platform plat = Platform.detect();
         String resource = "/natives/" + plat.dir + "/" + plat.lib;
-
         try (InputStream inputStream = NativeLoader.class.getResourceAsStream(resource)) {
             if (inputStream == null) {
                 throw new UnsatisfiedLinkError("Cannot locate Box2D native library on classpath: " + resource);
             }
-
             File tmpDir = new File(System.getProperty("java.io.tmpdir"), "box2d-natives");
             if (!tmpDir.exists() && !tmpDir.mkdirs()) {
                 throw new RuntimeException("Failed to create temp directory: " + tmpDir);
             }
-
             File tmpLib = new File(tmpDir, plat.lib);
             Files.copy(inputStream, tmpLib.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
             if (plat == Platform.Linux) {
                 int permission = 0;
                 permission += tmpLib.setExecutable(true, false) ? 1 : 0;
@@ -64,8 +59,11 @@ public class NativeLoader {
                 permission += tmpLib.setWritable(true, true) ? 1 : 0;
                 if (permission < 3) throw new RuntimeException("Failed to set permission for the library's file");
             }
-
-            System.load(tmpLib.getAbsolutePath());
+            try {
+                System.load(tmpLib.getAbsolutePath());
+            } catch (IllegalCallerException e) {
+                throw nativeAccessDenied(e);
+            }
             loaded = true;
         } catch (IOException e) {
             throw new RuntimeException("Failed to extract Box2D native library: ", e);
@@ -78,5 +76,24 @@ public class NativeLoader {
      */
     public static boolean isLoaded() {
         return loaded;
+    }
+
+    /**
+     * Create guiding message when missing native access to load the native library.
+     * <p>
+     * This is when the JVM denies native access due to missing {@code --enable-native-access}.
+     * Required target is this module's name on the module path, or {@code ALL-UNNAMED} on the classpath.
+     * @param cause the exception cause
+     * @return the cause with attached guide
+     */
+    private static UnsatisfiedLinkError nativeAccessDenied(IllegalCallerException cause) {
+        Module module = NativeLoader.class.getModule();
+        String grant = module.isNamed() ? module.getName() : "ALL-UNNAMED";
+        UnsatisfiedLinkError error = new UnsatisfiedLinkError(
+                "Box2D Java requires native access, but it is not enabled. "
+                        + "Add the JVM argument --enable-native-access=" + grant + " when launching "
+                        + "(or set 'Enable-Native-Access: ALL-UNNAMED' in your executable JAR's manifest).");
+        error.initCause(cause);
+        return error;
     }
 }
